--- a/hebergement marseille.html
+++ b/hebergement marseille.html
@@ -7,61 +7,114 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/dd12bbf080.js" crossorigin="anonymous"></script>
 </head>
 <body> 
     <main> 
-        <h1>Hébergements à Marseille</h1>
-        <div class="bloccarte">
-        <figure>
-            <img src="img/la_cannebiere.jpg" alt="chambre de la cannebière">
-            <ul>
-                <li>Auberge La Cannebière</li>
-                <li>Nuit à partir de 25€</li>
-                <li></li>
-            </ul>
-        </figure>
-        <figure>
-            <img src="img/hotel_du_port.jpg" alt="chambre hotel du port">
-            <ul>
-                <li>Hôtel du port</li>
-                <li>Nuit à partir de 52€</li>
-                <li></li>
-            </ul>
-        </figure>
-        <figure>
-            <img src="img/les_mouettes.jpg" alt="chambre les mouettes">
-            <ul>
-                <li>Hôtel les mouettes</li>
-                <li>Nuit à partir de 76€</li>
-                <li></li>
-            </ul>
-        </figure>
-        <figure>
-            <img src="img/la_mer.jpg" alt="chambre la mer">
-            <ul>
-                <li>Hôtel de la mer</li>
-                <li>Nuit à partir de 46€</li>
-                <li></li>
-            </ul>
-        </figure>
-        <figure>
-            <img src="img/le_panier.jpg" alt="chambre le panier">
-            <ul>
-                <li>Auberge le panier</li>
-                <li>Nuit à partir de 23€</li>
-                <li></li>
-            </ul>
-        </figure>
-        <figure>
-            <img src="img/amina.jpg" alt="chambre chez Amina">
-            <ul>
-                <li>Hôtel chez Amina</li>
-                <li>Nuit à partir de 96€</li>
-                <li></li>
-            </ul>
-        </figure>
-        </div>
-        <h2>Afficher plus</h2>
+        <section>
+            <h1>Hébergements à Marseille</h1>
+            <div class="bloccarte">
+            <figure>
+                <img src="img/la_cannebiere.jpg" alt="chambre de la cannebière">
+                <ul>
+                    <li>Auberge La Cannebière</li>
+                    <li>Nuit à partir de 25€</li>
+                    <li><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <i class="fa-duotone fa-star"></i></li>
+                </ul>   
+            </figure>
+            <figure>
+                <img src="img/hotel_du_port.jpg" alt="chambre hotel du port">
+                <ul>
+                    <li>Hôtel du port</li>
+                    <li>Nuit à partir de 52€</li>
+                    <li></li>
+                </ul>
+            </figure>
+            <figure>
+                <img src="img/les_mouettes.jpg" alt="chambre les mouettes">
+                <ul>
+                    <li>Hôtel les mouettes</li>
+                    <li>Nuit à partir de 76€</li>
+                    <li></li>
+                </ul>
+            </figure>
+            <figure>
+                <img src="img/la_mer.jpg" alt="chambre la mer">
+                <ul>
+                    <li>Hôtel de la mer</li>
+                    <li>Nuit à partir de 46€</li>
+                    <li></li>
+                </ul>
+            </figure>
+            <figure>
+                <img src="img/le_panier.jpg" alt="chambre le panier">
+                <ul>
+                    <li>Auberge le panier</li>
+                    <li>Nuit à partir de 23€</li>
+                    <li></li>
+                </ul>
+            </figure>
+            <figure>
+                <img src="img/amina.jpg" alt="chambre chez Amina">
+                <ul>
+                    <li>Hôtel chez Amina</li>
+                    <li>Nuit à partir de 96€</li>
+                    <li></li>
+                </ul>
+            </figure>
+            </div>
+            <h2>Afficher plus</h2>
+        </section>
+        <section>   
+            <h1>Activités à Marseille</h1>
+            <figure>
+                <img src="img/vieux_port.jpg" alt="">
+                <figcaption>Vieux-Port</figcaption>
+            </figure>
+            <figure>
+                <img src="img/pomegues.jpg" alt="">
+                <figcaption>Fort de pomègues</figcaption>
+            </figure>
+            <figure>
+                <img src="img/calanques.jpg" alt="">
+                <figcaption>Parc national des Calanques</figcaption>
+            </figure>
+            <figure>
+                <img src="img/notre_dame.jpg" alt="">
+                <figcaption>Notre-Dame-de-la-Garde</Notre-dame-de-la-></figcaption>
+            </figure>
+        </section>
+        <aside>
+            <h1>Les plus populaires</h1>
+            <figure>
+                <img src="img/le_soleil.jpg" alt="">
+                <ul>
+                    <li>Hôtel le soleil du matin</li>
+                    <li>Nuit à partir de 128€</li>
+                    <li></li>
+                </ul>
+            </figure>
+            <figure>
+                <img src="img/au_coeur.jpg" alt="">
+                <ul>
+                    <li>Chambres d'hôtes au coeur de l'eau</li>
+                    <li>Nuit à partir de 71€</li>
+                    <li></li>
+                </ul>
+            </figure>
+            <figure>
+                <img src="img/bleu_blanc.jpg" alt="">
+                <ul>
+                    <li>Hôtel bleu et blanc</li>
+                    <li>Nuit à partir de 68€</li>
+                    <li></li>
+                </ul>
+            </figure>
+        </aside>
     </main>
     
 </body>
