--- a/hebergement marseille.html
+++ b/hebergement marseille.html
@@ -11,7 +11,7 @@
 </head>
 <body> 
     <main> 
-        <section>
+        <section class="section1">
             <h1>Hébergements à Marseille</h1>
             <div class="bloccarte">
             <figure>
@@ -69,27 +69,9 @@
             </div>
             <h2>Afficher plus</h2>
         </section>
-        <section>   
-            <h1>Activités à Marseille</h1>
-            <figure>
-                <img src="img/vieux_port.jpg" alt="">
-                <figcaption>Vieux-Port</figcaption>
-            </figure>
-            <figure>
-                <img src="img/pomegues.jpg" alt="">
-                <figcaption>Fort de pomègues</figcaption>
-            </figure>
-            <figure>
-                <img src="img/calanques.jpg" alt="">
-                <figcaption>Parc national des Calanques</figcaption>
-            </figure>
-            <figure>
-                <img src="img/notre_dame.jpg" alt="">
-                <figcaption>Notre-Dame-de-la-Garde</Notre-dame-de-la-></figcaption>
-            </figure>
-        </section>
         <aside>
             <h1>Les plus populaires</h1>
+            <div class="bloccarteaside">
             <figure>
                 <img src="img/le_soleil.jpg" alt="">
                 <ul>
@@ -114,7 +96,29 @@
                     <li></li>
                 </ul>
             </figure>
+            </div>
         </aside>
+        <section class="section2">   
+            <h1>Activités à Marseille</h1>
+            <div class="bloccarte2">
+            <figure>
+                <img src="img/vieux_port.jpg" alt="">
+                <figcaption>Vieux-Port</figcaption>
+            </figure>
+            <figure>
+                <img src="img/pomegues.jpg" alt="">
+                <figcaption>Fort de pomègues</figcaption>
+            </figure>
+            <figure>
+                <img src="img/calanques.jpg" alt="">
+                <figcaption>Parc national des Calanques</figcaption>
+            </figure>
+            <figure>
+                <img src="img/notre_dame.jpg" alt="">
+                <figcaption>Notre-Dame-de-la-Garde</Notre-dame-de-la-></figcaption>
+            </figure>
+            </div>
+        </section>
     </main>
     
 </body>
