--- a/hebergement marseille.html
+++ b/hebergement marseille.html
@@ -126,7 +126,7 @@
         <div class="apropos">
             <ul class="apropos__ul">
                 <h3>A propos</H3>
-                <li><a href="https://www.afec.fr/">Fonctionnement du Site</a></li>
+                <li><a href="">Fonctionnement du Site</a></li>
                 <li>Générale de vente</li>
                 <li>Données et confidentialité</li>
             </ul>
